Fix multiple bugs + Move params from definitions to templates + Introduce Jacoco plugin for test coverage + Write multiple other test scenarios